test/success/nostd/mono/enums/main.sk
module Main {

enum Foo[T] {
    A(T),
    B
}

struct Bar {}

struct Baz {}

fn main() {
    let a = A(Bar());
    let b = A(Baz());
}

}